[package]
name = "etl-exporter"
version = "0.1.1-dev"
edition = "2021"

[[bin]]
name = "etl-extract"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1"
structopt = "0"
dotenv = "0"
chrono = {version = "0", features = ["serde"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
futures = "0"
tokio = { version = "1", features = ["full"] }
sqlx = {version = "0", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
